--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activities.HomeActivity"/>
+        <activity android:name=".Activities.CadastroActivity"/>
 
         <meta-data
             android:name="preloaded_fonts"
