--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.DragonSushi"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
             android:name=".Activities.LoginActivity"
             android:exported="true">
             <intent-filter>
@@ -25,8 +28,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.HomeActivity"/>
-        <activity android:name=".Activities.CadastroActivity"/>
+        <activity android:name=".Activities.HomeActivity" />
+        <activity android:name=".Activities.CadastroActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
