--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DragonSushi"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity2"
-            android:exported="false" />
+
         <activity
             android:name=".Activities.LoginActivity"
             android:exported="true">
@@ -29,6 +27,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.HomeActivity" />
+        <activity android:name=".Activities.CategoriaActivity" />
         <activity android:name=".Activities.CadastroActivity" />
 
         <meta-data
