--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         </activity>
         <activity android:name=".Activities.CategoriaActivity" />
         <activity android:name=".Activities.CadastroActivity" />
+        <activity android:name=".Activities.BuscaActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
