--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,18 +20,18 @@
         <activity
             android:name=".Activities.LoginActivity"
             android:exported="true">
-
-        </activity>
-        <activity android:name=".Activities.HomeActivity"
-            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activities.HomeActivity"
+            android:exported="true">
+        </activity>
         <activity android:name=".Activities.CategoriaActivity" />
         <activity android:name=".Activities.CadastroActivity" />
         <activity android:name=".Activities.BuscaActivity" />
+        <activity android:name=".Activities.DetalhesActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
