--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,14 @@
         <activity
             android:name=".Activities.LoginActivity"
             android:exported="true">
-        </activity>
-        <activity android:name=".Activities.HomeActivity"
-            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Activities.HomeActivity"
+            android:exported="true">
+
         </activity>
         <activity android:name=".Activities.CategoriaActivity" />
         <activity android:name=".Activities.CadastroActivity"
@@ -34,6 +35,7 @@
         </activity>
         <activity android:name=".Activities.BuscaActivity" />
         <activity android:name=".Activities.DetalhesActivity" />
+        <activity android:name=".Activities.PerfilActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
