--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 
 dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'com.google.android.gms:play-services-identity:18.0.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
@@ -36,6 +37,7 @@ dependencies {
     implementation 'com.android.car.ui:car-ui-lib:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.android.volley:volley:1.2.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
