--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -21,10 +22,6 @@
         <activity
             android:name=".Activities.LoginActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".Activities.HomeActivity"
             android:exported="true">
@@ -37,7 +34,15 @@
         <activity android:name=".Activities.DetalhesActivity" />
         <activity android:name=".Activities.PerfilActivity" />
         <activity android:name=".Activities.EditActivity" />
-        <activity android:name=".Activities.HistoricoPedidoActivity" />
+        <activity android:name=".Activities.AddressActivity" />
+        <activity android:name=".Activities.PagtoActivity" />
+        <activity android:name=".Activities.CarrinhoActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
