--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             android:exported="true">
         </activity>
         <activity android:name=".Activities.BuscaActivity" />
-        <activity android:name=".Activities.DetalhesActivity" />
+        <activity android:name=".Activities.DetalhesActivity"
+            android:parentActivityName=".Activities.CategoriaActivity" />
         <activity android:name=".Activities.PerfilActivity" />
         <activity android:name=".Activities.EditActivity" />
         <activity android:name=".Activities.AddressActivity" />
